se agrega el primer pattern. Se inicia css

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Backgrounds</title>
+		<title>Backgrounds</title>
 </head>
 <body>
 	<h1>Backgrounds</h1>
 		<ul>
 			<li>
-				<a href="/patterns.html" target="_blank">Patterns - Patrones</a>
+				<a href="patterns.html" target="_blank">Patterns - Patrones</a>
+			</li>
+		</ul>
 </body>
 </html>
