Se agregan opacidades

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 			<li>
 				<a href="patterns.html" target="_blank">Patterns - Patrones</a>
 			</li>
+			<li>
+				<a href="size.html" target="_blank">Sizes - Tamaños</a>
+			</li>
 		</ul>
 </body>
 </html>
